[package]
name = "ruscher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.12"
regex = "1.7.0"
lazy_static = "1.4.0"
async-trait = "0.1.58"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
futures = "0.3.25"
rand = "0.8.5"